RESOLVED FIXED32219
Object.create fails if properties on the descriptor are getters
https://bugs.webkit.org/show_bug.cgi?id=32219
Summary Object.create fails if properties on the descriptor are getters
Oliver Hunt
Reported 2009-12-07 05:44:48 PST
Once again i forgot to initialise the propertyslot with a base object.
Attachments
Patch (6.73 KB, patch)
2009-12-07 05:46 PST, Oliver Hunt
mjs: review+
Oliver Hunt
Comment 1 2009-12-07 05:46:45 PST
Maciej Stachowiak
Comment 2 2009-12-07 05:47:46 PST
Comment on attachment 44407 [details] Patch r=me
Oliver Hunt
Comment 3 2009-12-07 05:51:17 PST
Committed r51760
Note You need to log in before you can comment on or make changes to this bug.