Object.create fails if properties on the descriptor are getters https://bugs.webkit.org/show_bug.cgi?id=32219

Reviewed by Maciej Stachowiak.

Correctly initialise the PropertySlots with the descriptor object.

Canonical link: https://commits.webkit.org/43187@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51760 268f45cc-cd09-0410-ab3c-d52691b4dbfc